Compiladores/g-v1.output
Grammar

    0 $accept: Programa $end

    1 Programa: PRINCIPAL Bloco

    2 Bloco: '{' ListaComando '}'
    3      | VarSection '{' ListaComando '}'

    4 VarSection: ListaDeclVar

    5 ListaDeclVar: IDENTIFICADOR DeclVar ':' Tipo ';' ListaDeclVar
    6             | IDENTIFICADOR DeclVar ':' Tipo ';'

    7 DeclVar: ε
    8        | ',' IDENTIFICADOR DeclVar

    9 Tipo: INT
   10     | CAR

   11 ListaComando: Comando
   12             | Comando ListaComando

   13 Comando: ';'
   14        | Expr ';'
   15        | LEIA IDENTIFICADOR ';'
   16        | ESCREVA Expr ';'
   17        | ESCREVA CADEIACARACTERES ';'
   18        | NOVALINHA ';'
   19        | SE '(' Expr ')' ENTAO ListaComando FIMSE
   20        | SE '(' Expr ')' ENTAO ListaComando SENAO ListaComando FIMSE
   21        | ENQUANTO '(' Expr ')' Comando
   22        | Bloco

   23 Expr: OrExpr
   24     | IDENTIFICADOR '=' Expr

   25 OrExpr: OrExpr OU AndExpr
   26       | AndExpr

   27 AndExpr: AndExpr E EqExpr
   28        | EqExpr

   29 EqExpr: EqExpr IGUAL DesigExpr
   30       | EqExpr DIFERENTE DesigExpr
   31       | DesigExpr

   32 DesigExpr: DesigExpr '<' AddExpr
   33          | DesigExpr '>' AddExpr
   34          | DesigExpr MAIORIGUAL AddExpr
   35          | DesigExpr MENORIGUAL AddExpr
   36          | AddExpr

   37 AddExpr: AddExpr '+' MulExpr
   38        | AddExpr '-' MulExpr
   39        | MulExpr

   40 MulExpr: MulExpr '*' UnExpr
   41        | MulExpr '/' UnExpr
   42        | UnExpr

   43 UnExpr: '-' PrimExpr
   44       | '!' PrimExpr
   45       | PrimExpr

   46 PrimExpr: IDENTIFICADOR
   47         | CARCONST
   48         | INTCONST
   49         | '(' Expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 44
    '(' (40) 19 20 21 49
    ')' (41) 19 20 21 49
    '*' (42) 40
    '+' (43) 37
    ',' (44) 8
    '-' (45) 38 43
    '/' (47) 41
    ':' (58) 5 6
    ';' (59) 5 6 13 14 15 16 17 18
    '<' (60) 32
    '=' (61) 24
    '>' (62) 33
    '{' (123) 2 3
    '}' (125) 2 3
    error (256)
    PRINCIPAL (258) 1
    IDENTIFICADOR (259) 5 6 8 15 24 46
    INT (260) 9
    CAR (261) 10
    LEIA (262) 15
    ESCREVA (263) 16 17
    NOVALINHA (264) 18
    SE (265) 19 20
    ENTAO (266) 19 20
    SENAO (267) 20
    FIMSE (268) 19 20
    ENQUANTO (269) 21
    CADEIACARACTERES (270) 17
    OU (271) 25
    E (272) 27
    IGUAL (273) 29
    DIFERENTE (274) 30
    MAIORIGUAL (275) 34
    MENORIGUAL (276) 35
    CARCONST (277) 47
    INTCONST (278) 48


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    Programa (40)
        on left: 1
        on right: 0
    Bloco (41)
        on left: 2 3
        on right: 1 22
    VarSection (42)
        on left: 4
        on right: 3
    ListaDeclVar (43)
        on left: 5 6
        on right: 4 5
    DeclVar (44)
        on left: 7 8
        on right: 5 6 8
    Tipo (45)
        on left: 9 10
        on right: 5 6
    ListaComando (46)
        on left: 11 12
        on right: 2 3 12 19 20
    Comando (47)
        on left: 13 14 15 16 17 18 19 20 21 22
        on right: 11 12 21
    Expr (48)
        on left: 23 24
        on right: 14 16 19 20 21 24 49
    OrExpr (49)
        on left: 25 26
        on right: 23 25
    AndExpr (50)
        on left: 27 28
        on right: 25 26 27
    EqExpr (51)
        on left: 29 30 31
        on right: 27 28 29 30
    DesigExpr (52)
        on left: 32 33 34 35 36
        on right: 29 30 31 32 33 34 35
    AddExpr (53)
        on left: 37 38 39
        on right: 32 33 34 35 36 37 38
    MulExpr (54)
        on left: 40 41 42
        on right: 37 38 39 40 41
    UnExpr (55)
        on left: 43 44 45
        on right: 40 41 42
    PrimExpr (56)
        on left: 46 47 48 49
        on right: 43 44 45


State 0

    0 $accept: • Programa $end

    PRINCIPAL  shift, and go to state 1

    Programa  go to state 2


State 1

    1 Programa: PRINCIPAL • Bloco

    IDENTIFICADOR  shift, and go to state 3
    '{'            shift, and go to state 4

    Bloco         go to state 5
    VarSection    go to state 6
    ListaDeclVar  go to state 7


State 2

    0 $accept: Programa • $end

    $end  shift, and go to state 8


State 3

    5 ListaDeclVar: IDENTIFICADOR • DeclVar ':' Tipo ';' ListaDeclVar
    6             | IDENTIFICADOR • DeclVar ':' Tipo ';'

    ','  shift, and go to state 9

    $default  reduce using rule 7 (DeclVar)

    DeclVar  go to state 10


State 4

    2 Bloco: '{' • ListaComando '}'

    IDENTIFICADOR  shift, and go to state 11
    LEIA           shift, and go to state 12
    ESCREVA        shift, and go to state 13
    NOVALINHA      shift, and go to state 14
    SE             shift, and go to state 15
    ENQUANTO       shift, and go to state 16
    CARCONST       shift, and go to state 17
    INTCONST       shift, and go to state 18
    '{'            shift, and go to state 4
    ';'            shift, and go to state 19
    '('            shift, and go to state 20
    '-'            shift, and go to state 21
    '!'            shift, and go to state 22

    Bloco         go to state 23
    VarSection    go to state 6
    ListaDeclVar  go to state 7
    ListaComando  go to state 24
    Comando       go to state 25
    Expr          go to state 26
    OrExpr        go to state 27
    AndExpr       go to state 28
    EqExpr        go to state 29
    DesigExpr     go to state 30
    AddExpr       go to state 31
    MulExpr       go to state 32
    UnExpr        go to state 33
    PrimExpr      go to state 34


State 5

    1 Programa: PRINCIPAL Bloco •

    $default  reduce using rule 1 (Programa)


State 6

    3 Bloco: VarSection • '{' ListaComando '}'

    '{'  shift, and go to state 35


State 7

    4 VarSection: ListaDeclVar •

    $default  reduce using rule 4 (VarSection)


State 8

    0 $accept: Programa $end •

    $default  accept


State 9

    8 DeclVar: ',' • IDENTIFICADOR DeclVar

    IDENTIFICADOR  shift, and go to state 36


State 10

    5 ListaDeclVar: IDENTIFICADOR DeclVar • ':' Tipo ';' ListaDeclVar
    6             | IDENTIFICADOR DeclVar • ':' Tipo ';'

    ':'  shift, and go to state 37


State 11

    5 ListaDeclVar: IDENTIFICADOR • DeclVar ':' Tipo ';' ListaDeclVar
    6             | IDENTIFICADOR • DeclVar ':' Tipo ';'
   24 Expr: IDENTIFICADOR • '=' Expr
   46 PrimExpr: IDENTIFICADOR •

    ','  shift, and go to state 9
    '='  shift, and go to state 38

    ':'       reduce using rule 7 (DeclVar)
    $default  reduce using rule 46 (PrimExpr)

    DeclVar  go to state 10


State 12

   15 Comando: LEIA • IDENTIFICADOR ';'

    IDENTIFICADOR  shift, and go to state 39


State 13

   16 Comando: ESCREVA • Expr ';'
   17        | ESCREVA • CADEIACARACTERES ';'

    IDENTIFICADOR     shift, and go to state 40
    CADEIACARACTERES  shift, and go to state 41
    CARCONST          shift, and go to state 17
    INTCONST          shift, and go to state 18
    '('               shift, and go to state 20
    '-'               shift, and go to state 21
    '!'               shift, and go to state 22

    Expr       go to state 42
    OrExpr     go to state 27
    AndExpr    go to state 28
    EqExpr     go to state 29
    DesigExpr  go to state 30
    AddExpr    go to state 31
    MulExpr    go to state 32
    UnExpr     go to state 33
    PrimExpr   go to state 34


State 14

   18 Comando: NOVALINHA • ';'

    ';'  shift, and go to state 43


State 15

   19 Comando: SE • '(' Expr ')' ENTAO ListaComando FIMSE
   20        | SE • '(' Expr ')' ENTAO ListaComando SENAO ListaComando FIMSE

    '('  shift, and go to state 44


State 16

   21 Comando: ENQUANTO • '(' Expr ')' Comando

    '('  shift, and go to state 45


State 17

   47 PrimExpr: CARCONST •

    $default  reduce using rule 47 (PrimExpr)


State 18

   48 PrimExpr: INTCONST •

    $default  reduce using rule 48 (PrimExpr)


State 19

   13 Comando: ';' •

    $default  reduce using rule 13 (Comando)


State 20

   49 PrimExpr: '(' • Expr ')'

    IDENTIFICADOR  shift, and go to state 40
    CARCONST       shift, and go to state 17
    INTCONST       shift, and go to state 18
    '('            shift, and go to state 20
    '-'            shift, and go to state 21
    '!'            shift, and go to state 22

    Expr       go to state 46
    OrExpr     go to state 27
    AndExpr    go to state 28
    EqExpr     go to state 29
    DesigExpr  go to state 30
    AddExpr    go to state 31
    MulExpr    go to state 32
    UnExpr     go to state 33
    PrimExpr   go to state 34


State 21

   43 UnExpr: '-' • PrimExpr

    IDENTIFICADOR  shift, and go to state 47
    CARCONST       shift, and go to state 17
    INTCONST       shift, and go to state 18
    '('            shift, and go to state 20

    PrimExpr  go to state 48


State 22

   44 UnExpr: '!' • PrimExpr

    IDENTIFICADOR  shift, and go to state 47
    CARCONST       shift, and go to state 17
    INTCONST       shift, and go to state 18
    '('            shift, and go to state 20

    PrimExpr  go to state 49


State 23

   22 Comando: Bloco •

    $default  reduce using rule 22 (Comando)


State 24

    2 Bloco: '{' ListaComando • '}'

    '}'  shift, and go to state 50


State 25

   11 ListaComando: Comando •
   12             | Comando • ListaComando

    IDENTIFICADOR  shift, and go to state 11
    LEIA           shift, and go to state 12
    ESCREVA        shift, and go to state 13
    NOVALINHA      shift, and go to state 14
    SE             shift, and go to state 15
    ENQUANTO       shift, and go to state 16
    CARCONST       shift, and go to state 17
    INTCONST       shift, and go to state 18
    '{'            shift, and go to state 4
    ';'            shift, and go to state 19
    '('            shift, and go to state 20
    '-'            shift, and go to state 21
    '!'            shift, and go to state 22

    $default  reduce using rule 11 (ListaComando)

    Bloco         go to state 23
    VarSection    go to state 6
    ListaDeclVar  go to state 7
    ListaComando  go to state 51
    Comando       go to state 25
    Expr          go to state 26
    OrExpr        go to state 27
    AndExpr       go to state 28
    EqExpr        go to state 29
    DesigExpr     go to state 30
    AddExpr       go to state 31
    MulExpr       go to state 32
    UnExpr        go to state 33
    PrimExpr      go to state 34


State 26

   14 Comando: Expr • ';'

    ';'  shift, and go to state 52


State 27

   23 Expr: OrExpr •
   25 OrExpr: OrExpr • OU AndExpr

    OU  shift, and go to state 53

    $default  reduce using rule 23 (Expr)


State 28

   26 OrExpr: AndExpr •
   27 AndExpr: AndExpr • E EqExpr

    E  shift, and go to state 54

    $default  reduce using rule 26 (OrExpr)


State 29

   28 AndExpr: EqExpr •
   29 EqExpr: EqExpr • IGUAL DesigExpr
   30       | EqExpr • DIFERENTE DesigExpr

    IGUAL      shift, and go to state 55
    DIFERENTE  shift, and go to state 56

    $default  reduce using rule 28 (AndExpr)


State 30

   31 EqExpr: DesigExpr •
   32 DesigExpr: DesigExpr • '<' AddExpr
   33          | DesigExpr • '>' AddExpr
   34          | DesigExpr • MAIORIGUAL AddExpr
   35          | DesigExpr • MENORIGUAL AddExpr

    MAIORIGUAL  shift, and go to state 57
    MENORIGUAL  shift, and go to state 58
    '<'         shift, and go to state 59
    '>'         shift, and go to state 60

    $default  reduce using rule 31 (EqExpr)


State 31

   36 DesigExpr: AddExpr •
   37 AddExpr: AddExpr • '+' MulExpr
   38        | AddExpr • '-' MulExpr

    '+'  shift, and go to state 61
    '-'  shift, and go to state 62

    $default  reduce using rule 36 (DesigExpr)


State 32

   39 AddExpr: MulExpr •
   40 MulExpr: MulExpr • '*' UnExpr
   41        | MulExpr • '/' UnExpr

    '*'  shift, and go to state 63
    '/'  shift, and go to state 64

    $default  reduce using rule 39 (AddExpr)


State 33

   42 MulExpr: UnExpr •

    $default  reduce using rule 42 (MulExpr)


State 34

   45 UnExpr: PrimExpr •

    $default  reduce using rule 45 (UnExpr)


State 35

    3 Bloco: VarSection '{' • ListaComando '}'

    IDENTIFICADOR  shift, and go to state 11
    LEIA           shift, and go to state 12
    ESCREVA        shift, and go to state 13
    NOVALINHA      shift, and go to state 14
    SE             shift, and go to state 15
    ENQUANTO       shift, and go to state 16
    CARCONST       shift, and go to state 17
    INTCONST       shift, and go to state 18
    '{'            shift, and go to state 4
    ';'            shift, and go to state 19
    '('            shift, and go to state 20
    '-'            shift, and go to state 21
    '!'            shift, and go to state 22

    Bloco         go to state 23
    VarSection    go to state 6
    ListaDeclVar  go to state 7
    ListaComando  go to state 65
    Comando       go to state 25
    Expr          go to state 26
    OrExpr        go to state 27
    AndExpr       go to state 28
    EqExpr        go to state 29
    DesigExpr     go to state 30
    AddExpr       go to state 31
    MulExpr       go to state 32
    UnExpr        go to state 33
    PrimExpr      go to state 34


State 36

    8 DeclVar: ',' IDENTIFICADOR • DeclVar

    ','  shift, and go to state 9

    $default  reduce using rule 7 (DeclVar)

    DeclVar  go to state 66


State 37

    5 ListaDeclVar: IDENTIFICADOR DeclVar ':' • Tipo ';' ListaDeclVar
    6             | IDENTIFICADOR DeclVar ':' • Tipo ';'

    INT  shift, and go to state 67
    CAR  shift, and go to state 68

    Tipo  go to state 69


State 38

   24 Expr: IDENTIFICADOR '=' • Expr

    IDENTIFICADOR  shift, and go to state 40
    CARCONST       shift, and go to state 17
    INTCONST       shift, and go to state 18
    '('            shift, and go to state 20
    '-'            shift, and go to state 21
    '!'            shift, and go to state 22

    Expr       go to state 70
    OrExpr     go to state 27
    AndExpr    go to state 28
    EqExpr     go to state 29
    DesigExpr  go to state 30
    AddExpr    go to state 31
    MulExpr    go to state 32
    UnExpr     go to state 33
    PrimExpr   go to state 34


State 39

   15 Comando: LEIA IDENTIFICADOR • ';'

    ';'  shift, and go to state 71


State 40

   24 Expr: IDENTIFICADOR • '=' Expr
   46 PrimExpr: IDENTIFICADOR •

    '='  shift, and go to state 38

    $default  reduce using rule 46 (PrimExpr)


State 41

   17 Comando: ESCREVA CADEIACARACTERES • ';'

    ';'  shift, and go to state 72


State 42

   16 Comando: ESCREVA Expr • ';'

    ';'  shift, and go to state 73


State 43

   18 Comando: NOVALINHA ';' •

    $default  reduce using rule 18 (Comando)


State 44

   19 Comando: SE '(' • Expr ')' ENTAO ListaComando FIMSE
   20        | SE '(' • Expr ')' ENTAO ListaComando SENAO ListaComando FIMSE

    IDENTIFICADOR  shift, and go to state 40
    CARCONST       shift, and go to state 17
    INTCONST       shift, and go to state 18
    '('            shift, and go to state 20
    '-'            shift, and go to state 21
    '!'            shift, and go to state 22

    Expr       go to state 74
    OrExpr     go to state 27
    AndExpr    go to state 28
    EqExpr     go to state 29
    DesigExpr  go to state 30
    AddExpr    go to state 31
    MulExpr    go to state 32
    UnExpr     go to state 33
    PrimExpr   go to state 34


State 45

   21 Comando: ENQUANTO '(' • Expr ')' Comando

    IDENTIFICADOR  shift, and go to state 40
    CARCONST       shift, and go to state 17
    INTCONST       shift, and go to state 18
    '('            shift, and go to state 20
    '-'            shift, and go to state 21
    '!'            shift, and go to state 22

    Expr       go to state 75
    OrExpr     go to state 27
    AndExpr    go to state 28
    EqExpr     go to state 29
    DesigExpr  go to state 30
    AddExpr    go to state 31
    MulExpr    go to state 32
    UnExpr     go to state 33
    PrimExpr   go to state 34


State 46

   49 PrimExpr: '(' Expr • ')'

    ')'  shift, and go to state 76


State 47

   46 PrimExpr: IDENTIFICADOR •

    $default  reduce using rule 46 (PrimExpr)


State 48

   43 UnExpr: '-' PrimExpr •

    $default  reduce using rule 43 (UnExpr)


State 49

   44 UnExpr: '!' PrimExpr •

    $default  reduce using rule 44 (UnExpr)


State 50

    2 Bloco: '{' ListaComando '}' •

    $default  reduce using rule 2 (Bloco)


State 51

   12 ListaComando: Comando ListaComando •

    $default  reduce using rule 12 (ListaComando)


State 52

   14 Comando: Expr ';' •

    $default  reduce using rule 14 (Comando)


State 53

   25 OrExpr: OrExpr OU • AndExpr

    IDENTIFICADOR  shift, and go to state 47
    CARCONST       shift, and go to state 17
    INTCONST       shift, and go to state 18
    '('            shift, and go to state 20
    '-'            shift, and go to state 21
    '!'            shift, and go to state 22

    AndExpr    go to state 77
    EqExpr     go to state 29
    DesigExpr  go to state 30
    AddExpr    go to state 31
    MulExpr    go to state 32
    UnExpr     go to state 33
    PrimExpr   go to state 34


State 54

   27 AndExpr: AndExpr E • EqExpr

    IDENTIFICADOR  shift, and go to state 47
    CARCONST       shift, and go to state 17
    INTCONST       shift, and go to state 18
    '('            shift, and go to state 20
    '-'            shift, and go to state 21
    '!'            shift, and go to state 22

    EqExpr     go to state 78
    DesigExpr  go to state 30
    AddExpr    go to state 31
    MulExpr    go to state 32
    UnExpr     go to state 33
    PrimExpr   go to state 34


State 55

   29 EqExpr: EqExpr IGUAL • DesigExpr

    IDENTIFICADOR  shift, and go to state 47
    CARCONST       shift, and go to state 17
    INTCONST       shift, and go to state 18
    '('            shift, and go to state 20
    '-'            shift, and go to state 21
    '!'            shift, and go to state 22

    DesigExpr  go to state 79
    AddExpr    go to state 31
    MulExpr    go to state 32
    UnExpr     go to state 33
    PrimExpr   go to state 34


State 56

   30 EqExpr: EqExpr DIFERENTE • DesigExpr

    IDENTIFICADOR  shift, and go to state 47
    CARCONST       shift, and go to state 17
    INTCONST       shift, and go to state 18
    '('            shift, and go to state 20
    '-'            shift, and go to state 21
    '!'            shift, and go to state 22

    DesigExpr  go to state 80
    AddExpr    go to state 31
    MulExpr    go to state 32
    UnExpr     go to state 33
    PrimExpr   go to state 34


State 57

   34 DesigExpr: DesigExpr MAIORIGUAL • AddExpr

    IDENTIFICADOR  shift, and go to state 47
    CARCONST       shift, and go to state 17
    INTCONST       shift, and go to state 18
    '('            shift, and go to state 20
    '-'            shift, and go to state 21
    '!'            shift, and go to state 22

    AddExpr   go to state 81
    MulExpr   go to state 32
    UnExpr    go to state 33
    PrimExpr  go to state 34


State 58

   35 DesigExpr: DesigExpr MENORIGUAL • AddExpr

    IDENTIFICADOR  shift, and go to state 47
    CARCONST       shift, and go to state 17
    INTCONST       shift, and go to state 18
    '('            shift, and go to state 20
    '-'            shift, and go to state 21
    '!'            shift, and go to state 22

    AddExpr   go to state 82
    MulExpr   go to state 32
    UnExpr    go to state 33
    PrimExpr  go to state 34


State 59

   32 DesigExpr: DesigExpr '<' • AddExpr

    IDENTIFICADOR  shift, and go to state 47
    CARCONST       shift, and go to state 17
    INTCONST       shift, and go to state 18
    '('            shift, and go to state 20
    '-'            shift, and go to state 21
    '!'            shift, and go to state 22

    AddExpr   go to state 83
    MulExpr   go to state 32
    UnExpr    go to state 33
    PrimExpr  go to state 34


State 60

   33 DesigExpr: DesigExpr '>' • AddExpr

    IDENTIFICADOR  shift, and go to state 47
    CARCONST       shift, and go to state 17
    INTCONST       shift, and go to state 18
    '('            shift, and go to state 20
    '-'            shift, and go to state 21
    '!'            shift, and go to state 22

    AddExpr   go to state 84
    MulExpr   go to state 32
    UnExpr    go to state 33
    PrimExpr  go to state 34


State 61

   37 AddExpr: AddExpr '+' • MulExpr

    IDENTIFICADOR  shift, and go to state 47
    CARCONST       shift, and go to state 17
    INTCONST       shift, and go to state 18
    '('            shift, and go to state 20
    '-'            shift, and go to state 21
    '!'            shift, and go to state 22

    MulExpr   go to state 85
    UnExpr    go to state 33
    PrimExpr  go to state 34


State 62

   38 AddExpr: AddExpr '-' • MulExpr

    IDENTIFICADOR  shift, and go to state 47
    CARCONST       shift, and go to state 17
    INTCONST       shift, and go to state 18
    '('            shift, and go to state 20
    '-'            shift, and go to state 21
    '!'            shift, and go to state 22

    MulExpr   go to state 86
    UnExpr    go to state 33
    PrimExpr  go to state 34


State 63

   40 MulExpr: MulExpr '*' • UnExpr

    IDENTIFICADOR  shift, and go to state 47
    CARCONST       shift, and go to state 17
    INTCONST       shift, and go to state 18
    '('            shift, and go to state 20
    '-'            shift, and go to state 21
    '!'            shift, and go to state 22

    UnExpr    go to state 87
    PrimExpr  go to state 34


State 64

   41 MulExpr: MulExpr '/' • UnExpr

    IDENTIFICADOR  shift, and go to state 47
    CARCONST       shift, and go to state 17
    INTCONST       shift, and go to state 18
    '('            shift, and go to state 20
    '-'            shift, and go to state 21
    '!'            shift, and go to state 22

    UnExpr    go to state 88
    PrimExpr  go to state 34


State 65

    3 Bloco: VarSection '{' ListaComando • '}'

    '}'  shift, and go to state 89


State 66

    8 DeclVar: ',' IDENTIFICADOR DeclVar •

    $default  reduce using rule 8 (DeclVar)


State 67

    9 Tipo: INT •

    $default  reduce using rule 9 (Tipo)


State 68

   10 Tipo: CAR •

    $default  reduce using rule 10 (Tipo)


State 69

    5 ListaDeclVar: IDENTIFICADOR DeclVar ':' Tipo • ';' ListaDeclVar
    6             | IDENTIFICADOR DeclVar ':' Tipo • ';'

    ';'  shift, and go to state 90


State 70

   24 Expr: IDENTIFICADOR '=' Expr •

    $default  reduce using rule 24 (Expr)


State 71

   15 Comando: LEIA IDENTIFICADOR ';' •

    $default  reduce using rule 15 (Comando)


State 72

   17 Comando: ESCREVA CADEIACARACTERES ';' •

    $default  reduce using rule 17 (Comando)


State 73

   16 Comando: ESCREVA Expr ';' •

    $default  reduce using rule 16 (Comando)


State 74

   19 Comando: SE '(' Expr • ')' ENTAO ListaComando FIMSE
   20        | SE '(' Expr • ')' ENTAO ListaComando SENAO ListaComando FIMSE

    ')'  shift, and go to state 91


State 75

   21 Comando: ENQUANTO '(' Expr • ')' Comando

    ')'  shift, and go to state 92


State 76

   49 PrimExpr: '(' Expr ')' •

    $default  reduce using rule 49 (PrimExpr)


State 77

   25 OrExpr: OrExpr OU AndExpr •
   27 AndExpr: AndExpr • E EqExpr

    E  shift, and go to state 54

    $default  reduce using rule 25 (OrExpr)


State 78

   27 AndExpr: AndExpr E EqExpr •
   29 EqExpr: EqExpr • IGUAL DesigExpr
   30       | EqExpr • DIFERENTE DesigExpr

    IGUAL      shift, and go to state 55
    DIFERENTE  shift, and go to state 56

    $default  reduce using rule 27 (AndExpr)


State 79

   29 EqExpr: EqExpr IGUAL DesigExpr •
   32 DesigExpr: DesigExpr • '<' AddExpr
   33          | DesigExpr • '>' AddExpr
   34          | DesigExpr • MAIORIGUAL AddExpr
   35          | DesigExpr • MENORIGUAL AddExpr

    MAIORIGUAL  shift, and go to state 57
    MENORIGUAL  shift, and go to state 58
    '<'         shift, and go to state 59
    '>'         shift, and go to state 60

    $default  reduce using rule 29 (EqExpr)


State 80

   30 EqExpr: EqExpr DIFERENTE DesigExpr •
   32 DesigExpr: DesigExpr • '<' AddExpr
   33          | DesigExpr • '>' AddExpr
   34          | DesigExpr • MAIORIGUAL AddExpr
   35          | DesigExpr • MENORIGUAL AddExpr

    MAIORIGUAL  shift, and go to state 57
    MENORIGUAL  shift, and go to state 58
    '<'         shift, and go to state 59
    '>'         shift, and go to state 60

    $default  reduce using rule 30 (EqExpr)


State 81

   34 DesigExpr: DesigExpr MAIORIGUAL AddExpr •
   37 AddExpr: AddExpr • '+' MulExpr
   38        | AddExpr • '-' MulExpr

    '+'  shift, and go to state 61
    '-'  shift, and go to state 62

    $default  reduce using rule 34 (DesigExpr)


State 82

   35 DesigExpr: DesigExpr MENORIGUAL AddExpr •
   37 AddExpr: AddExpr • '+' MulExpr
   38        | AddExpr • '-' MulExpr

    '+'  shift, and go to state 61
    '-'  shift, and go to state 62

    $default  reduce using rule 35 (DesigExpr)


State 83

   32 DesigExpr: DesigExpr '<' AddExpr •
   37 AddExpr: AddExpr • '+' MulExpr
   38        | AddExpr • '-' MulExpr

    '+'  shift, and go to state 61
    '-'  shift, and go to state 62

    $default  reduce using rule 32 (DesigExpr)


State 84

   33 DesigExpr: DesigExpr '>' AddExpr •
   37 AddExpr: AddExpr • '+' MulExpr
   38        | AddExpr • '-' MulExpr

    '+'  shift, and go to state 61
    '-'  shift, and go to state 62

    $default  reduce using rule 33 (DesigExpr)


State 85

   37 AddExpr: AddExpr '+' MulExpr •
   40 MulExpr: MulExpr • '*' UnExpr
   41        | MulExpr • '/' UnExpr

    '*'  shift, and go to state 63
    '/'  shift, and go to state 64

    $default  reduce using rule 37 (AddExpr)


State 86

   38 AddExpr: AddExpr '-' MulExpr •
   40 MulExpr: MulExpr • '*' UnExpr
   41        | MulExpr • '/' UnExpr

    '*'  shift, and go to state 63
    '/'  shift, and go to state 64

    $default  reduce using rule 38 (AddExpr)


State 87

   40 MulExpr: MulExpr '*' UnExpr •

    $default  reduce using rule 40 (MulExpr)


State 88

   41 MulExpr: MulExpr '/' UnExpr •

    $default  reduce using rule 41 (MulExpr)


State 89

    3 Bloco: VarSection '{' ListaComando '}' •

    $default  reduce using rule 3 (Bloco)


State 90

    5 ListaDeclVar: IDENTIFICADOR DeclVar ':' Tipo ';' • ListaDeclVar
    6             | IDENTIFICADOR DeclVar ':' Tipo ';' •

    IDENTIFICADOR  shift, and go to state 3

    $default  reduce using rule 6 (ListaDeclVar)

    ListaDeclVar  go to state 93


State 91

   19 Comando: SE '(' Expr ')' • ENTAO ListaComando FIMSE
   20        | SE '(' Expr ')' • ENTAO ListaComando SENAO ListaComando FIMSE

    ENTAO  shift, and go to state 94


State 92

   21 Comando: ENQUANTO '(' Expr ')' • Comando

    IDENTIFICADOR  shift, and go to state 11
    LEIA           shift, and go to state 12
    ESCREVA        shift, and go to state 13
    NOVALINHA      shift, and go to state 14
    SE             shift, and go to state 15
    ENQUANTO       shift, and go to state 16
    CARCONST       shift, and go to state 17
    INTCONST       shift, and go to state 18
    '{'            shift, and go to state 4
    ';'            shift, and go to state 19
    '('            shift, and go to state 20
    '-'            shift, and go to state 21
    '!'            shift, and go to state 22

    Bloco         go to state 23
    VarSection    go to state 6
    ListaDeclVar  go to state 7
    Comando       go to state 95
    Expr          go to state 26
    OrExpr        go to state 27
    AndExpr       go to state 28
    EqExpr        go to state 29
    DesigExpr     go to state 30
    AddExpr       go to state 31
    MulExpr       go to state 32
    UnExpr        go to state 33
    PrimExpr      go to state 34


State 93

    5 ListaDeclVar: IDENTIFICADOR DeclVar ':' Tipo ';' ListaDeclVar •

    $default  reduce using rule 5 (ListaDeclVar)


State 94

   19 Comando: SE '(' Expr ')' ENTAO • ListaComando FIMSE
   20        | SE '(' Expr ')' ENTAO • ListaComando SENAO ListaComando FIMSE

    IDENTIFICADOR  shift, and go to state 11
    LEIA           shift, and go to state 12
    ESCREVA        shift, and go to state 13
    NOVALINHA      shift, and go to state 14
    SE             shift, and go to state 15
    ENQUANTO       shift, and go to state 16
    CARCONST       shift, and go to state 17
    INTCONST       shift, and go to state 18
    '{'            shift, and go to state 4
    ';'            shift, and go to state 19
    '('            shift, and go to state 20
    '-'            shift, and go to state 21
    '!'            shift, and go to state 22
